--- a/SEA_Application/Views/Shared/_StudentDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_StudentDashboardLayout.cshtml
@@ -53,7 +53,23 @@
         .hidden {
             display: none;
         }
+
+        .footer {
+            padding: 0.9375rem 0;
+            text-align: center;
+            padding: 25px;
+            display: -webkit-flex;
+            display: flex;
+        }
+         #Notification_Dropdown_Area {
+            list-style-type: none;
+            margin:0px;
+            padding:0px;
+        }
     </style>
+
+
+
 </head>
 
 
@@ -315,32 +331,33 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-end">
                         <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="javascript:;">
-                                    <i class="sea-icons-nav">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 26.284 26.261">
-                                            <defs>
-                                                <style>
-                                                    .prefix__cls-1 {
-                                                        fill: none;
-                                                        stroke: #afbccc;
-                                                        stroke-width: 2px;
-                                                    }
-                                                </style>
-                                            </defs>
-                                            <g id="prefix__Icon-setting" transform="translate(-1914.284 -667.899)">
-                                                <path id="prefix__Path_362" d="M1924.777 669.03a12.339 12.339 0 0 0-3.581 1.4 3.344 3.344 0 0 1-3.228 4.274 3.5 3.5 0 0 1-1.029-.156 12.2 12.2 0 0 0-1.49 3.492 3.343 3.343 0 0 1 0 5.986 12.2 12.2 0 0 0 1.49 3.494 3.479 3.479 0 0 1 1.03-.157 3.343 3.343 0 0 1 3.227 4.273 12.284 12.284 0 0 0 3.581 1.4 3.379 3.379 0 0 1 5.752-.123 12.273 12.273 0 0 0 3.566-1.556 3.364 3.364 0 0 1 3.319-3.994 3.537 3.537 0 0 1 .543.042 12.193 12.193 0 0 0 1.492-3.665 3.339 3.339 0 0 1 0-5.408 12.194 12.194 0 0 0-1.492-3.665 3.432 3.432 0 0 1-.544.043 3.365 3.365 0 0 1-3.318-3.994 12.227 12.227 0 0 0-3.566-1.555 3.38 3.38 0 0 1-5.752-.125z" class="prefix__cls-1" data-name="Path 362" />
-                                                <path id="prefix__Path_363" d="M1930.863 685.107a5.319 5.319 0 1 1-3.415-9.4" class="prefix__cls-1" data-name="Path 363" />
-                                                <path id="prefix__Path_364" d="M1927.448 675.71a5.327 5.327 0 0 1 5.321 5.322" class="prefix__cls-1" data-name="Path 364" />
-                                            </g>
-                                        </svg>
-                                    </i>
-                                    <span class="d-lg-inline-block d-md-inline-block">
-                                        Setting
-                                    </span>
-                                    <div class="ripple-container"></div>
+
+
+                            <li class="dropdown notifications-menu">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+
+                                    <i class="fa fa-bell-o"></i>
+                                    <span id="Notification_Numbers" class="label label-warning"></span>
                                 </a>
+                                <ul class="dropdown-menu">
+                                    <li id="Notification_Header" class="header"></li>
+
+                                    <li>
+                                        <!-- inner menu: contains the actual data -->
+                                        <ul class="menu" id="Notification_Dropdown_Area">
+
+                                            @*<li>
+                                <a href="#">
+                                    <i class="fa fa-users text-aqua"></i> 5 new members joined today
+                                </a>
+                            </li>*@
+
+                                        </ul>
+                                    </li>
+                                    <li class="footer"><a href="#">View all</a></li>
+                                </ul>
                             </li>
+
                             @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "form_padding_20" }))
                             {
                                 @Html.AntiForgeryToken()
@@ -516,6 +533,25 @@
 
         $(document).ready(function () {
 
+        $.get('@Url.Action("GetNotifications","AspNetPushNotifications")', function (data) {
+            debugger
+
+               if (data.length == 0) {
+                $('#Notification_Numbers').html('0');
+            }
+            else {
+                $('#Notification_Numbers').html(data.length);
+            }
+
+            $('#Notification_Header').html('You have ' + data.length + ' unread notifications');
+            $.each(data, function (i, item) {
+                // item.Message = item.Message.substring(0, 10);
+                //item.Message = item.Message + "...";
+                // $('#notification_Dropdown_area').append('<li><a href="/AspNetPushNotifications/Details?id=' + item.Id + '"><p>' + item.Message + '</p></a></li>');
+                $('#Notification_Dropdown_Area').append('<li><a href="/AspNetPushNotifications/Details?id=' + item.Id + '"> '+ item.Description + '</a></li>')
+
+            });
+        });
 
 
         });
