--- a/SEA_Application/Views/AspNetTimeTable/Index.cshtml
+++ b/SEA_Application/Views/AspNetTimeTable/Index.cshtml
@@ -106,7 +106,7 @@
                                 Room
                             </th>
 
-                            <th></th>
+                            <th>Action</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -120,7 +120,8 @@
                                     @Html.DisplayFor(modelItem => item.AspNetUser.Name)
                                 </td>*@
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Day)
+                                    @item.Day.Split(' ')[0]
+                                    
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.AspNetRoom.Name)
