--- a/SEA_Application/Views/AspnetLessons/Create.cshtml
+++ b/SEA_Application/Views/AspnetLessons/Create.cshtml
@@ -591,7 +591,7 @@
 
                                             <option value="CSS">CSS</option>
                                             <option value="PMS">PMS</option>
-
+                                            <option value="One Paper MCQs">One Paper MCQs</option>
                                         </select>
 
                                     </div>
@@ -820,7 +820,7 @@
                     </div>
 
                     <hr class="mt-5 mb-4">
-                    <button id="prevBtn" onclick="nextPrev(-1)" class="btn btn-primary pull-left rounded rounded-lg bg-transparent text-muted shadow-none mr-3" type="reset">Back</button>
+                    <button id="prevBtn" onclick="nextPrev(-1)" class="btn btn-primary pull-left rounded rounded-lg bg-transparent text-muted shadow-none mr-3" type="button">Back</button>
                     <button class="btn btn-primary pull-left rounded rounded-lg shadow-none mr-3" type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
 
                     <input type="submit" value="Create" id="CreateBtn" class="btn btn-primary pull-right rounded rounded-lg shadow-none mr-3" />
