--- a/SEA_Application/Views/AspnetLessons/CreateLessonSession.cshtml
+++ b/SEA_Application/Views/AspnetLessons/CreateLessonSession.cshtml
@@ -323,7 +323,7 @@
 
                                     <option value="CSS">CSS</option>
                                     <option value="PMS">PMS</option>
-
+                                    <option value="One Paper MCQs">One Paper MCQs</option>
                                 </select>
                             </div>
 
