--- a/SEA_Application/Views/AspnetSubjectTopics/Create.cshtml
+++ b/SEA_Application/Views/AspnetSubjectTopics/Create.cshtml
@@ -229,7 +229,7 @@
                                     <option value="">Select One</option>
                                     <option value="CSS">CSS</option>
                                     <option value="PMS">PMS</option>
-
+                                    <option value="One Paper MCQs">One Paper MCQs</option>
                                 </select>
 
 
