--- a/SEA_Application/Views/AspnetSubjectTopics/Edit.cshtml
+++ b/SEA_Application/Views/AspnetSubjectTopics/Edit.cshtml
@@ -277,9 +277,10 @@
                                 @Html.DropDownList("CTId", new List<SelectListItem>
                                   {
 
-                                new SelectListItem{ Text="Select One", Value = "" },
-                                   new SelectListItem{ Text="CSS", Value = "CSS" },
-                                  new SelectListItem{ Text="PMS", Value = "PMS" },
+                                      new SelectListItem{ Text="Select One", Value = "" },
+                                      new SelectListItem{ Text="CSS", Value = "CSS" },
+                                      new SelectListItem{ Text="PMS", Value = "PMS" },
+                                      new SelectListItem{ Text="One Paper MCQs", Value = "One Paper MCQs" },
 
                                    }, htmlAttributes: new { @class = "form-control", @required = true })
 
