--- a/SEA_Application/Views/Shared/_LayoutPage_Login.cshtml
+++ b/SEA_Application/Views/Shared/_LayoutPage_Login.cshtml
@@ -40,7 +40,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
     <meta charset="utf-8" />
-    <title>SEA | Smarter Education Analytics</title>
+    <title>OA | Best Academy for CSS</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta content="Preview page of Metronic Admin Theme #2 for statistics, charts, recent events and reports" name="description" />
@@ -176,7 +176,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
 <!-- END HEAD -->
 
-<body class="page-header-fixed page-sidebar-closed-hide-logo page-container-bg-solid">
+<body class="page-header-fixed page-sidebar-closed-hide-logo page-container-bg-solid ">
     <!-- BEGIN HEADER -->
     <!-- END HEADER -->
     <!-- BEGIN HEADER & CONTENT DIVIDER -->
@@ -197,7 +197,7 @@ License: You must have a valid license purchased only from themeforest(the above
         <a href="javascript:;" class="page-quick-sidebar-toggler">
             <i class="icon-login"></i>
         </a>
-        <div class="page-quick-sidebar-wrapper" data-close-on-body-click="false">
+        <div class="page-quick-sidebar-wrapper hidden" data-close-on-body-click="false">
             <div class="page-quick-sidebar">
                 <ul class="nav nav-tabs">
                     <li class="active">
