--- a/SEA_Application/Content/assets/css/material-dashboard.css
+++ b/SEA_Application/Content/assets/css/material-dashboard.css
@@ -2356,7 +2356,7 @@ pre code {
 
 .form-control:disabled,
 .form-control[readonly] {
-  background-color: #e9ecef;
+  background-color: aliceblue;
   opacity: 1;
 }
 
