--- a/SEA_Application/Views/AspnetLessons/Edit.cshtml
+++ b/SEA_Application/Views/AspnetLessons/Edit.cshtml
@@ -497,6 +497,7 @@
                                             {
                                             new SelectListItem{ Text="CSS", Value = "CSS" },
                                             new SelectListItem{ Text="PMS", Value = "PMS" },
+                                            new SelectListItem{ Text="One Paper MCQs", Value = "One Paper MCQs" },
                                              }, htmlAttributes: new { @class = "form-control CTIdDDL" })
                                     </div>
                                 </div>
@@ -812,7 +813,7 @@
                     </div>
 
                     <hr class="mt-5 mb-4">
-                    <button id="prevBtn" onclick="nextPrev(-1)" class="btn btn-primary pull-left rounded rounded-lg bg-transparent text-muted shadow-none mr-3" type="reset">Back</button>
+                    <button id="prevBtn" onclick="nextPrev(-1)" class="btn btn-primary pull-left rounded rounded-lg bg-transparent text-muted shadow-none mr-3" type="button">Back</button>
                     <button class="btn btn-primary pull-left rounded rounded-lg shadow-none mr-3" type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
 
                     <input type="submit" value="Update" id="CreateBtn" class="btn btn-success pull-right rounded rounded-lg shadow-none mr-3" />
