--- a/SEA_Application/Views/AspnetLessons/Create.cshtml
+++ b/SEA_Application/Views/AspnetLessons/Create.cshtml
@@ -444,9 +444,9 @@
                     if (data == "Yes") {
 
 
-                        $("#CreateBtn").attr("disabled", true);
+                       // $("#CreateBtn").attr("disabled", true);
 
-                        $("#ErrorOrderBy").html("Selected order is already assigned to a lesson of same topic.");
+                      //  $("#ErrorOrderBy").html("Selected order is already assigned to a lesson of same topic.");
                     }
                     else {
 
