--- a/SEA_Application/Views/AspnetSubjectTopics/Create.cshtml
+++ b/SEA_Application/Views/AspnetSubjectTopics/Create.cshtml
@@ -166,9 +166,8 @@
                     if (data == "Yes") {
 
 
-                        $("#SaveButton").attr("disabled", true);
-
-                        $("#ErrorOrderBy").html("Selected order is already assigned to a topic of same subject.");
+                    //    $("#SaveButton").attr("disabled", true);
+                      // $("#ErrorOrderBy").html("Selected order is already assigned to a topic of same subject.");
                     }
                     else {
 
