--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -230,6 +230,14 @@
                     </li>                    
 
                     <li class="nav-item">
+                        <a href="@Url.Action("Password", "AspNetSession" )" class="nav-link nav-toggle">
+                            <i class="sea-dash">
+                                <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
+                            </i>
+                            <p>Student Passwords</p>
+                        </a>
+                    </li> 
+                    <li class="nav-item">
                         <a href="@Url.Action("Index", "AspNetTimeslots" )" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
