--- a/SEA_Application/Views/AspnetSubjectTopics/ViewTopicsAndLessons.cshtml
+++ b/SEA_Application/Views/AspnetSubjectTopics/ViewTopicsAndLessons.cshtml
@@ -4,6 +4,15 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
 }
+
+                      <style>
+                          div#datatable_filter {
+                              display: block !important;
+                          }
+                          div#datatable1_filter {
+                              display: block !important;
+                          }
+                      </style>
 <script>
     $(document).ready(function () {
 
