OA changes Lesson filter + calendar

--- a/SEA_Application/Views/Admin_Dashboard/BlankPage.cshtml
+++ b/SEA_Application/Views/Admin_Dashboard/BlankPage.cshtml
@@ -1,4 +1,20 @@
 ﻿
+@using System.Linq;
+@using System.Net;
+@using System.Web.Mvc;
+@using SEA_Application.Models;
+@using System.IO;
+@using Microsoft.AspNet.Identity;
+@{
+    SEA_DatabaseEntities db = new SEA_DatabaseEntities();
+    var CurrentUserId = User.Identity.GetUserId();
+
+    string name = db.AspNetUsers.Where(x => x.Id == CurrentUserId).Select(x => x.Name).FirstOrDefault();
+    var dt = DateTime.Now;
+    DateTime Firstday = dt.AddDays(-(int)dt.DayOfWeek);
+    DateTime Endaday = Firstday.AddDays(6);
+    int countLesson = db.Events.Where(x => x.UserId == CurrentUserId && x.Start <= Endaday && x.Start >= Firstday).Count();
+}
 <script>
     //$(document).ready(function () {
 
@@ -24,19 +40,19 @@
     <div class="row">
         <div class="col-sm-12 col-md-9 col-lg-9">
             <div class="d-flex">
-                <div id="dayPart_div" class="mr-4 flex-3 sunSide1"><img id="dayPart_img" src="~/Content/assets/img/sun.png" /></div>
+                <div id="dayPart_div" class="mr-4 flex-3 sunSide"><img id="dayPart_img" src="~/Content/assets/img/sun.png" /></div>
                 <div>
                     <div class="afternoon mt-2">
-                        <h1 class=""><small>Good <span>Afternoon</span></small> Admin!</h1>
+                        <h1 class=""><small>Good <span>Afternoon</span></small> @name!</h1>
                         <p>
-                            There are <span id="upcomming_lesson">4</span> upcoming Lessons this week.
+                            There are <span id="upcomming_lesson">@countLesson</span> upcoming Lessons this week.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-md-3 col-lg-3 align-items-center d-flex justify-content-end">
-            <button type="button" class="btn btn-primary pull-right rounded rounded-lg createBtn coursesBtn" onclick="window.location.href=''">
+            <button type="button" class="btn btn-primary pull-right rounded rounded-lg createBtn coursesBtn" onclick="window.location.href = '/AspnetSubjectTopics/ViewTopicsAndLessons'">
                 View All Lessons
             </button>
         </div>
@@ -66,6 +82,13 @@
                             <div id="ClassesFilter" aria-labelledby="navbarDropdownProfile" x-placement="bottom-end" style="position: absolute; top: 45px; left: 1607px; will-change: top, left;" class="dropdown-menu dropdown-menu-right">
 
 
+
+                                @foreach (var c in ViewBag.AllClasses)
+                                {
+
+                                    <a class="dropdown-item" href="#">@c</a>
+
+                                }
 
 
                             </div>
