--- a/SEA_Application/Views/AspNetSession/Password.cshtml
+++ b/SEA_Application/Views/AspNetSession/Password.cshtml
@@ -49,7 +49,7 @@
 
         $("#ClassID").prepend('<option value="0" >All</option>');
 
-        $("#PageHeader").html("Student Passwords");
+        $("#PageHeader").html("User Passwords");
 
         $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
         $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Students Data</a></li>');
