--- a/SEA_Application/Views/AspnetLessons/EditLessonSession.cshtml
+++ b/SEA_Application/Views/AspnetLessons/EditLessonSession.cshtml
@@ -33,7 +33,7 @@
     $(document).ready(function () {
 
 
-        $("#PageHeader").html("Edit Lesson Session");
+        $("#PageHeader").html("Edit Schedule Lesson");
 
         $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
         $("#BreadCrumbs").append(' <li> <a href="/AspnetLessons/LessonSessionView"> Lesson Session </a> <span>&gt;</span></li>');
