--- a/SEA_Application/Views/AspnetLessons/LessonSessionView.cshtml
+++ b/SEA_Application/Views/AspnetLessons/LessonSessionView.cshtml
@@ -50,11 +50,11 @@
 
                         $(document).ready(function () {
 
-                            $("#PageHeader").html("Lesson Session ");
+                            $("#PageHeader").html("Schedule Lesson ");
 
                         $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
                         $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Lesson Sessions</a></li>');
-
+                        $("#generic_div").removeClass('hidden');
 
 
 
